# simeng-libelf

./: .gitignore  CMakeLists.txt
lib/: CMakeLists.txt  config.h  printversion.c  system.h
libelf/: CMakeLists.txt  elf_compress.c  libelfP.h
